# trading-models

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-monitor.yml
config/: accounts.json
scripts/: build_daily_brief.py  fetch_alpha_watchlist.py  fetch_x_watchlist.py  nightly_iteration.sh  run_baseline.py
src/trading_models/: config.py  data.py  features.py  model.py
src/trading_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_features.py  test_model.py  test_run_baseline_output.py
