[project]
name = "trading-models"
version = "0.1.0"
description = "Predictive trading toolkit for Ahmed's research workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.0",
  "yfinance>=0.2.54",
  "matplotlib>=3.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
